--- a/dyngraph.html
+++ b/dyngraph.html
@@ -47,7 +47,7 @@
 	  .float-control-child {
 	      width: 35%;
 	      float: right;
-	      padding: 50px;
+	      padding: 2vw;
 	      /* border: 2px solid red; */
 	  }
 	  .centred {
@@ -114,24 +114,34 @@
 	      <td><label><input type="radio" name="graphalgs" class="rb" id="rb_s2r" onClick="set_graph_alg(1);" />S2R</label></td>
 	    </tr>
 	    <tr>
+	      <td><label><input type="radio" name="graphalgs" class="rb" id="rb_e2g" onClick="set_graph_alg(2);" />EdgeLst</label></td>
+	      <td><!-- <label><input type="radio" name="graphalgs" class="rb" id="rb_s2r" onClick="set_graph_alg(1);" />S2R</label> --></td>
+	    </tr>
+	    <tr>
 	      <td><input type="button" class="button1" id="btn_pause" onClick="pause();" value="Pause" /></td>
 	      <td><input type="button" class="button1" id="btn_cont" onClick="go_on();" value="Continue" disabled></td>
 	    </tr>
 	    <tr>
-	      <td><input type="button" class="button1" id="btn_start" onClick="start(canv_name,Number(nodes.value),Number(edges.value));" value="Restart" /></td>
+	      <td><input type="button" class="button1" id="btn_start" onClick="start(canv_name,Number(txt_nodes.value),Number(txt_edges.value));" value="Restart" /></td>
 	      <td><input type="button" class="button1" id="btn_stop" onClick="stop();" value="Stop" /></td>
 	    </tr>
 	    <tr>
 	      <td colspan="2"><input type="button" class="button2" onClick="clear_canvas();" value="Clear Canvas" /></td>
 	    </tr>
+	    <tr>
+	      <td colspan="2"><textarea id="edge_list" rows="30" cols="40"></textarea>
+	    </tr>
+	    <!-- <tr> -->
+	    <!--   <td colspan="2"><input type="button" class="button2" onClick="send_edge_list;" value="Submit List" /></td> -->
+	    <!-- </tr> -->
 	  </table>
 	</div>
       <!-- </div> -->
       <script type="text/javascript">
 	const tracer = document.getElementById("cb_tracing");
 	tracer.addEventListener("change",function() { check_tracer(); });
-	const nodes = document.getElementById("nu_nodes");
-	const edges = document.getElementById("nu_edges");
+	const txt_nodes = document.getElementById("nu_nodes");
+	const txt_edges = document.getElementById("nu_edges");
 	const btn_start = document.getElementById("btn_start");
 	const btn_stop = document.getElementById("btn_stop");
 	const btn_pause = document.getElementById("btn_pause");
@@ -140,7 +150,8 @@
 	sel_fillcol.addEventListener("change",function() { set_fill_col(); });
 	const sel_linecol = document.getElementById("line_col");
 	sel_linecol.addEventListener("change",function() { set_line_col(); });
-
+	const area_edgelist = document.getElementById("edge_list");
+	area_edgelist.placeholder = "n1 n2\nn2 n3\nn3 n1";
       </script>
     </body>
 </html>
