--- a/dyngraph.html
+++ b/dyngraph.html
@@ -109,6 +109,9 @@
 	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></input></td>
 	    </tr>
 	    <tr>
+	      <td colspan="2"><input type="button" class="button2" onClick="print_edges(area_edgelist);" value="Print Edges" /></td>
+	    </tr>
+	    <tr>
 	      <td colspan="2"><input type="button" class="button2" onClick="clear_canvas();" value="Clear Canvas" /></td>
 	    </tr>
 	    <tr>
