--- a/dyngraph.html
+++ b/dyngraph.html
@@ -3,6 +3,7 @@
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
+	<link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
         <title>Dynamic graph</title>
         <script src="js/main.js"></script>
         <script src="js/node.js"></script>
