--- a/dyngraph.html
+++ b/dyngraph.html
@@ -12,8 +12,9 @@
 	  const canv_name = "c";
 	  function config() {
 	      check_tracer();
-	      set_fill_col();
-	      set_line_col();
+	      sel_fillcol.dispatchEvent(new Event("change"));
+	      sel_linecol.dispatchEvent(new Event("change"));
+	      sel_tracecol.dispatchEvent(new Event("change"));
 	  }
 	  function remove_unconnected() {
 	      const edge_list = get_edge_list();
@@ -65,7 +66,7 @@
 	      text-align: center;
 	  }
 	  .button1 {
-	      width: 10rem;
+	      width: 11rem;
 	  }
 	  .button2 {
 	      width: 100%;
@@ -107,11 +108,15 @@
 	    </tr>
 	    <tr>
 	      <td><label>fill</label></td>
-	      <td><input id="fill_col" type="color" value="#48929B"></input></td>
+	      <td><input id="fill_col" type="color" value="#48929B"></input></td> <!-- 浅葱色「あさぎいろ」 -->
 	    </tr>
 	    <tr>
 	      <td><label>line</label></td>
-	      <td><input id="line_col" type="color" value="#344D56"></input></td>
+	      <td><input id="line_col" type="color" value="#344D56"></input></td> <!-- 熨斗目花色「のしめはないろ」 -->
+	    </tr>
+	    <tr>
+	      <td><label>trace</label></td>
+	      <td><input id="trace_col" type="color" value="#C6C2B6"></input></td> <!-- 瓶覗「かめのぞき」 -->
 	    </tr>
 	    <tr>
 	      <td><label>tracing</label></td>
@@ -142,7 +147,7 @@
 	      <td colspan="2"><label><input type="radio" name="graphalgs" class="rb" id="rb_e2g" onClick="set_graph_alg(2);" />from Edge List</label></td>
 	    </tr>
 	    <tr>
-	      <td colspan="2" class="centred"><textarea id="edge_list" rows="20" cols="40"></textarea>
+	      <td colspan="2" class="centred"><textarea id="edge_list" rows="20" cols="41"></textarea>
 	    </tr>
 	    <tr>
 	      <td colspan="2"><input type="button" class="button2" onClick="remove_unconnected();" value="Remove Lone Nodes" /></td>
@@ -160,9 +165,11 @@
 	const btn_pause = document.getElementById("btn_pause");
 	const btn_cont = document.getElementById("btn_cont");
 	const sel_fillcol = document.getElementById("fill_col");
-	sel_fillcol.addEventListener("change",function() { set_fill_col(); });
+	sel_fillcol.addEventListener("change",function() { fill_colour = sel_fillcol.value; });
 	const sel_linecol = document.getElementById("line_col");
-	sel_linecol.addEventListener("change",function() { set_line_col(); });
+	sel_linecol.addEventListener("change",function() { line_colour = sel_linecol.value; });
+	const sel_tracecol = document.getElementById("trace_col");
+	sel_tracecol.addEventListener("change",function() { trace_colour = sel_tracecol.value; });
 	const area_edgelist = document.getElementById("edge_list");
 	area_edgelist.placeholder = "n1 n2\nn2 n3\nn3 n1";
       </script>
