another default for trace colour

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -116,7 +116,7 @@
 	    </tr>
 	    <tr>
 	      <td><label>trace</label></td>
-	      <td><input id="trace_col" type="color" value="#C6C2B6"></input></td> <!-- 瓶覗「かめのぞき」 -->
+	      <td><input id="trace_col" type="color" value="#86ABA5"></input></td> <!-- 水色「みずいろ」 -->
 	    </tr>
 	    <tr>
 	      <td><label>tracing</label></td>
