control change: no countdown

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -128,10 +128,8 @@
 	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></input></td>
 	    </tr>
 	    <tr>
-	      <td colspan="2"><input type="button" class="button2" onClick="print_edges(area_edgelist);" value="Print Edges" /></td>
-	    </tr>
-	    <tr>
-	      <td colspan="2"><input type="button" class="button2" onClick="clear_canvas();" value="Clear Canvas" /></td>
+	      <td><input type="button" class="button2" onClick="print_edges(area_edgelist);" value="Print" /></td>
+	      <td><input type="button" class="button2" onClick="clear_canvas();" value="Clear" /></td>
 	    </tr>
 	    <tr>
 	      <td><input type="button" class="button1" id="btn_pause" onClick="pause();" value="Pause" /></td>
