--- a/dyngraph.html
+++ b/dyngraph.html
@@ -108,12 +108,20 @@
 	      <td><input id="nu_edges" type="number" value="100" min="1" max="1000"></input></td>
 	    </tr>
 	    <tr>
+	      <td><label>rand col</label></td>
+	      <td><input id="cb_randcol" class="cb" type="checkbox"></input></td>
+	    </tr>
+	    <tr>
 	      <td><label>fill</label></td>
 	      <td><input id="fill_col" type="color" value="#48929B"></input></td> <!-- 浅葱色「あさぎいろ」 -->
 	    </tr>
 	    <tr>
 	      <td><label>line</label></td>
 	      <td><input id="line_col" type="color" value="#344D56"></input></td> <!-- 熨斗目花色「のしめはないろ」 -->
+	    </tr>
+	    <tr>
+	      <td><label>rand tcol</label></td>
+	      <td><input id="cb_rand_tracecol" class="cb" type="checkbox"></input></td>
 	    </tr>
 	    <tr>
 	      <td><label>trace fill</label></td>
@@ -161,6 +169,10 @@
       <script type="text/javascript">
 	const tracer = document.getElementById("cb_tracing");
 	tracer.addEventListener("change",function() { check_tracer(); });
+	const cb_randcol = document.getElementById("cb_randcol");
+	cb_randcol.addEventListener("change",function() { check_randcol(); });
+	const cb_rand_tracecol = document.getElementById("cb_rand_tracecol");
+	cb_rand_tracecol.addEventListener("change",function() { check_rand_tracecol(); });
 	const txt_nodes = document.getElementById("nu_nodes");
 	const txt_edges = document.getElementById("nu_edges");
 	const btn_start = document.getElementById("btn_start");
